@@ -1,6 +1,11 @@
 # vim: set noexpandtab:
 
 2012-07-13 Steve
+	* Rename SusyNtTools method RemoveSFOSPair -> removeSFOSPair
+	* Also modified this function to use the isSFOS and Mll functions
+	* Rename eEtTopoConeCorr -> elEtTopoConeCorr
+
+2012-07-13 Steve
 	* Added global constants LUMI_A_B3 and LUMI_A_B14
 	* Updated getEventWeight functions in SusyNtAna for calculating
 	  the lumi, pileup, xsec combined weight
